--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,9 @@
 [tox]
 envlist = py36
+skipsdist = True
 
 [testenv]
+usedevelop = True
 deps = -r{toxinidir}/requirements.txt
 commands =
   flake8
